--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   },
   "dependencies": {
     "expose-loader": "^0.7.5",
-    "jquery": "^3.3.1",
-    "vue": "^2.5.17",
+    "jquery": "^3.4.1",
+    "jquery-ui": "^1.12.1",
+    "material-design-icons-iconfont": "^5.0.1",
+    "splitpanes": "^1.14.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
+    "vue": "^2.6.10",
     "vue-drag-resize": "^1.3.2",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.5.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
@@ -22,6 +28,6 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.10"
   }
 }
