--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "brace": "^0.11.1",
     "expose-loader": "^0.7.5",
     "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
