Before Adding FileSaver

--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "brace": "^0.11.1",
     "expose-loader": "^0.7.5",
+    "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.3",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
+    "jszip": "^3.2.2",
     "material-design-icons-iconfont": "^5.0.1",
+    "pcb-stackup": "^4.1.1",
+    "raw-loader": "^3.1.0",
     "splitpanes": "^1.14.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
