--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "brace": "^0.11.1",
     "expose-loader": "^0.7.5",
     "file-saver": "^2.0.2",
@@ -15,6 +16,7 @@
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jszip": "^3.2.2",
+    "jszip-utils": "^0.1.0",
     "material-design-icons-iconfont": "^5.0.1",
     "pcb-stackup": "^4.1.1",
     "raw-loader": "^3.1.0",
