--- a/package.json
+++ b/package.json
@@ -12,30 +12,30 @@
     "brace": "^0.11.1",
     "expose-loader": "^0.7.5",
     "file-saver": "^2.0.2",
-    "html2canvas": "^1.0.0-rc.3",
+    "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "jszip": "^3.2.2",
     "jszip-utils": "^0.1.0",
     "material-design-icons-iconfont": "^5.0.1",
-    "pcb-stackup": "^4.1.1",
+    "pcb-stackup": "^4.2.0",
     "raw-loader": "^3.1.0",
-    "splitpanes": "^1.14.2",
-    "stylus": "^0.54.5",
+    "splitpanes": "^1.14.5",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
     "vue": "^2.6.10",
     "vue-drag-resize": "^1.3.2",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.5.14"
+    "vue-router": "^3.1.3",
+    "vuetify": "^1.5.20"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.1",
-    "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.1.4",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-prettier": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
