--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ApplianzerServer",
+  "name": "applianzerserver",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/nodemon src/app.js 'npm run lint && node'",
+    "prod": "NODE_ENV='production' node src/app.js",
+    "serve": "./node_modules/.bin/nodemon src/app.js 'npm run lint && node'",
     "lint": "./node_modules/.bin/esling **/*.js"
   },
   "keywords": [],
