--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prod": "pm2 flush; pm2 delete app; NODE_ENV='production' pm2 start src/app.js",
-    "serve": "./node_modules/.bin/nodemon src/app.js 'npm run lint && node'",
+    "dev": "./node_modules/.bin/nodemon src/app.js 'npm run lint && node'",
     "lint": "./node_modules/.bin/esling **/*.js"
   },
   "keywords": [],
