--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "brace": "^0.11.1",
     "expose-loader": "^0.7.5",
     "file-saver": "^2.0.2",
+    "highlight.js": "^10.5.0",
     "html2canvas": "^1.0.0-rc.5",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
